tests/negative/semantic/wrong_arg_count_epochtoyear/input.ci
void main() {
    print(toString(epochToYear()) + "\n");
}
